src/objects/Event_Scheduling__c.object
<CustomObject>
    <description>Ticket - 12652</description>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Schedulings</relationshipLabel>
        <relationshipName>Event_Schedulings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Schedulings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Event Schedulings</relationshipLabel>
        <relationshipName>Event_Schedulings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Scheduling</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Technician__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ESCH-{00000000}</displayFormat>
        <label>Event Scheduling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Schedulings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>